test/solc-verify/examples/VerifResults.sol.gold
test/solc-verify/examples/VerifResults.sol:31:9: solc-verify error: Inline assembly is not supported
solc-verify warning: Balance modifications due to gas consumption or miner rewards are not modeled
test/solc-verify/examples/VerifResults.sol:30:5: solc-verify warning: Errors while translating function body, will be skipped
VerifResults::[constructor]: OK
VerifResults::set_correct: OK
VerifResults::set_incorrect: ERROR
 - test/solc-verify/examples/VerifResults.sol:23:5: Postcondition 'x == x1' might not hold at end of function.
VerifResults::use_unsupported: OK
VerifResults::unsupported: SKIPPED
Errors were found by the verifier.
